--- a/index.html
+++ b/index.html
@@ -3,93 +3,107 @@
 <head>
    <meta charset="UTF-8">
    <title>html doc</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <img src="fi-4-mei-2020-1.jpg" alt="Изображение фронтендера" width="450">
-   <h1>You doesnt start from scratch</h1>
-   <h2>You start experienced</h2>
-      <hr>
-   <p>Thats kinda frustrating but its <strong>all my fault</strong></p>
-   <p>but come on. <em>start slow but run fast!</em></p>
-      <hr>
-   <h2>Who am I thtough life?</h2>
-   <table>
-      <thead>
-         <tr bgcolor="silver">
-            <th>AGE</th>
-            <th>WHO</th>
-            <th>WANNABE</th>
-         </tr>
-      </thead>
-      <tbody>
-         <tr bgcolor="lime">
-            <td>0-13</td>
-            <td>Happy kid</td>
-            <td>Spaceman</td>
-         </tr>
-         <tr bgcolor="olive">
-            <td>14-22</td>
-            <td>Idiot teen</td>
-            <td>Dont care</td>
-         </tr>
-         <tr bgcolor="yellow">
-            <td>23-29</td>
-            <td>Trying young man</td>
-            <td>Video editor</td>
-         </tr>
-         <tr bgcolor="green">
-            <td>30-?</td>
-            <td>Trying man</td>
-            <td>Frontend Dev</td>
-         </tr>
-      </tbody>
-      <tfoot>
-         <tr bgcolor="silver">
-            <td>to be continued</td>
-         </tr>
-      </tfoot>
-   </table>
-      <hr>
-   <h2>my sources of knowledge</h2>
-      <ul>
-         <li> <a href="https://www.youtube.com/@VladilenMinin" target="_blank">VladilenMinin's YT Channel</a></li>
-         <li><a href="https://www.code.mu" target="_blank">Code.mu</a></li>
-      </ul>
-   <h2>my inspiration & hobbies</h2>
-      <ol>
-         <li>Snowboarding</li>
-         <li>Travel</li>
-         <li>Videogames</li>
-      </ol>
-      <hr>
-   <h2>my plans</h2>
-      <ul>
-         <li>get educated in frontend dev, meaning <a href="ui-ux-list.html" target="_blank">this list</a></li>
-         <li>get a decent job</li>
-         <li>to achieve:
-            <ul>
-               <li>health</li>
-               <li>house</li>
-               <li>kids</li>
-               <li>car</li>
+   <div class="container">
+      <div class="info">
+         <div class="pic-div">
+            <img src="fi-4-mei-2020-1.jpg" alt="Изображение фронтендера" class="topPic">
+         </div>
+         <div class="info-text">
+            <h1>You dont start from scratch, <br>You start experienced</h1>
+         <p>Thats kinda frustrating and its <strong>all my fault</strong>... <br>
+         but come on! Start slow but run fast!</p>
+         </div>
+      </div>
+      <div class="sources card">
+         <h2>my sources of knowledge</h2>
+         <a href="https://www.youtube.com/@VladilenMinin" target="_blank">VladilenMinin's YT Channel</a>
+         |
+         <a href="https://www.code.mu" target="_blank">Code.mu</a>
+      </div>
+      <div class="tablet card">
+         <h2>who am I through life?</h2>
+         <table>
+            <thead>
+               <tr>
+                  <th>AGE</th>
+                  <th>WHO</th>
+                  <th>WANNABE</th>
+               </tr>
+            </thead>
+            <tbody>
+               <tr>
+                  <td>0-13</td>
+                  <td>Happy kid</td>
+                  <td>Spaceman</td>
+               </tr>
+               <tr>
+                  <td>14-22</td>
+                  <td>Idiot teen</td>
+                  <td>Dont care</td>
+               </tr>
+               <tr>
+                  <td>23-29</td>
+                  <td>trying young man</td>
+                  <td>video editor</td>
+               </tr>
+               <tr>
+                  <td>30-?</td>
+                  <td>trying man</td>
+                  <td>frontend Dev</td>
+               </tr>
+            </tbody>
+         </table>
+      </div>
+
+      <div class="inspo card">
+         <h2>my inspiration & hobbies</h2>
+            <ol class="list">
+               <li>snowboarding</li>
                <li>travel</li>
-            </ul>
-         </li>
-      </ul>
-      <hr>
-   <h2>message me if u want</h2>
-   <form action="">
-      <label for="name">How can I call you?</label>
-      <input type="text" id="name" placeholder="introduce yourself...">
-      <br>
-      <label for="contact">How can I contact you?</label>
-      <input type="text" id="contact" placeholder="cell phone or e-mail etc...">
-      <br>
-      <label for="msg">Write your message here</label>
-      <br>
-      <textarea name="msg" id="msg" cols="30" rows="3"></textarea>
-      <br>
-      <input type="submit" value="send">
-   </form>
+               <li>videogames</li>
+            </ol>
+      </div>
+      <div class="plans card">
+      <h2>my plans</h2>
+         <ul class="list">
+            <li>get educated in frontend dev, meaning <a href="ui-ux-list.html" target="_blank">this list</a></li>
+            <li>get a decent job</li>
+            <li>to achieve:
+               <ul>
+                  <li>health</li>
+                  <li>house</li>
+                  <li>kids</li>
+                  <li>car</li>
+                  <li>travel</li>
+               </ul>
+            </li>
+         </ul>
+      </div>
+      <div class="contact card">
+         <h2>message me if u want</h2>
+         <form action="">
+            <div class="row">
+               <div class="form-group">
+                  <label for="name">how can I call you?</label>
+                  <input type="text" id="name" placeholder="introduce yourself...">
+               </div>
+               <div class="form-group">
+                  <label for="contact">how can I contact you?</label>
+                  <input type="text" id="contact" placeholder="cell phone or e-mail etc...">
+               </div>
+            </div>
+            <div class="form-group">
+               <label for="msg">write your message below</label>
+               <textarea name="msg" id="msg" cols="30" rows="2" placeholder="bla-bla-bla"></textarea>
+            </div>
+            <div class="form-group-btn"> 
+               <input type="submit" value="send">
+            </div>
+         </form>
+      </div>
+   </div>
 </body>
 </html>
